# numba-cuda-mlir

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTORS.md  INSTALL.md  LICENSE  README.md  pyproject.toml  setup.py
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  copy-pr-bot.yaml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature-request.md  submit-question.md
.github/actions/doc_preview/: action.yml
.github/actions/fetch_ctk/: action.yml
.github/actions/get_pr_number/: action.yml
.github/actions/install_unix_deps/: action.yml
.github/actions/restore_llvm_artifacts/: action.yml
.github/actions/sccache-summary/: action.yml
.github/workflows/: bandit.yml  build-docs.yml  build-llvm.yml  build-wheel.yml  ci.yaml  cleanup-pr-previews.yml  codeql.yml  docs-build.yaml  publish.yaml  simulator-test.yaml  test-cudf-source-linux.yml  test-expensive-linux.yml  test-numbast-mlir-linux.yml  test-nvmath-python-mlir-linux.yml  test-wheel-linux.yml  test-wheel-windows.yml
cext/: CMakeLists.txt  libnvvm_compat_passes.def
cext/helperlib/: CMakeLists.txt  _helperlib.cpp  _helpermod.cpp
cext/launcher/: CMakeLists.txt  cuda_helper.cpp  cuda_loader.cpp  cuda_loader.h  cuda_shim.h  kernel.cpp  llvm_downgrade.cpp  module.cpp  py.cpp  py.h
cext/mlir-llvm70/: CMakeLists.txt
cext/mlir-llvm70/include/llvm70/: CAPILoader.h  LLVM70Target.h  LibNVVMCompiler.h
cext/mlir-llvm70/include/llvm70/Dialect/: LLVM70.h
cext/mlir-llvm70/lib/: CAPI.cpp  CMakeLists.txt  LLVM70Target.cpp  LibNVVMCompiler.cpp
cext/mlir-llvm70/lib/Dialect/: LLVM70Dialect.cpp
cext/mlir-llvm70/test/: debuginfo.mlir  matmul.mlir
cext/mlir-llvm70/test/cudf/: cudf_example_1.mlir  cudf_example_2.mlir
cext/mlir-llvm70/tools/: CMakeLists.txt
cext/mlir-modern/: CMakeLists.txt  ModernBridge.cpp  ModernBridgeSmoke.cpp
cext/mlir-modern/include/: ModernBridge.h
cext/mviewbuf/: CMakeLists.txt  mviewbuf.cpp
cext/typeconv/: CMakeLists.txt  _typeconv.cpp  typeconv.cpp  typeconv.hpp
ci/: build-llvm-modern.sh  build-llvm7.sh  build-windows-driver.sh  build-windows.sh  cleanup-pr-previews  llvm-cache-key.sh  llvm-cache.sh  setup-sccache.sh  test-matrix.yml  versions.yml  windows-common.ps1  windows-devcontainer.env  windows-llvm-container-build.ps1  windows-run-tests-container.ps1
ci/tools/: download-wheels  env-vars  gen-llvm-c-exports.py  install_gpu_driver.ps1  lookup-run-id  run-coverage-tests  run-cuda-gdb-tests  run-cudf-source-tests  run-expensive-tests  run-numbast-mlir-tests  run-nvmath-python-mlir-tests  run-tests  validate-release-wheels
docs/: versions.json
docs/source/: index.rst
docs/source/extending/: high-level.rst  index.rst  low-level.rst
docs/source/reference/: cache_hints.rst  compilation.rst  envvars.rst  host.rst  index.rst  kernel.rst  libdevice.rst  memory.rst  types.rst
docs/source/user/: index.rst  installation.rst  profiling.rst
src/numba_cuda_mlir/: __init__.py  _version.py  caching.py  compiler.py  decorators.py  descriptor.py  device_declarations.py  errors.py  linker.py  lowering_registry.py  mlir_compiler.py  mlir_debuginfo.py  mlir_lowering.py  mlir_lowering_registry.py  mlir_optimization.py  models.py  tools.py  types.py
src/numba_cuda_mlir/ast_transforms/: __init__.py  common.py  comprehension.py  constant_if.py  consteval.py  pipeline.py
src/numba_cuda_mlir/cuda/: __init__.py  intrin.py  intrin.pyi  libdevice.py  libdevicefuncs.py  tcgen05_descriptors.py  tensor_map.py  vector_types.py
src/numba_cuda_mlir/extending/: __init__.py  argument_handler.py
src/numba_cuda_mlir/host/: union.py
src/numba_cuda_mlir/lowering/: builtins.py  cmath.py  ctypes.py  cuda.py  cuda_vector_types.py  datetime.py  enum.py  exotic_float.py  half_precision.py  libdevice.py  math.py  nrt.py  numpy.py  print.py  record.py  struct.py  unicode.py  union.py  vector.py
src/numba_cuda_mlir/lowering_utilities/: __init__.py  context.py  discover_functions.py  linalg_lowering.py  link.py  llvm_utils.py  type_conversions.py
src/numba_cuda_mlir/memory_management/: __init__.py  nrt.py  nrt_mlir.py  rtsys.py
src/numba_cuda_mlir/mlir/: util.py
src/numba_cuda_mlir/numba_cuda/: __init__.py  _compat.py  api.py  api_util.py  cache_hints.py  cg.py  cgutils.py  codegen.py  compiler.py  cuda_paths.py  cudaimpl.py  debuginfo.py  decorators.py  descriptor.py  (+19 more)
tests/: conftest.py  test_argument_handler_extensions.py  test_array.py  test_array_methods.py  test_array_reductions.py  test_array_view.py  test_atomics.py  test_bitwise.py  test_bool.py  test_builtin_broadcasted_binops.py  test_caching.py  test_captured_constants.py  test_class_poly.py  test_cmath_signed_zeros.py  test_compat_attrs.py  test_complex.py  test_coop_sync.py  test_cuda_array_interface_dtype.py  test_cuda_array_interface_launch_cache.py  test_cuda_gdb.py  test_custom_dtype.py  test_debuginfo.py  test_descriptor_launch_config.py  test_dynamic_shared_memory.py  test_enum.py  test_extending_lower_cast.py  test_forall.py  test_free_threading.py  test_half_precision.py  test_help_message.py  test_ice.py  test_inline_ptx.py  test_integer_division.py  test_intrinsics.py  test_jit_compat.py  test_kernel_exceptions.py  test_large_smem.py  test_libdevice.py  test_lowering_utilities.py  test_lto_defaults.py  (+19 more)
tests/ast_transforms/: test_ast_transform_examples.py  test_constant_if.py  test_consteval.py  test_device_func.py  test_dump_ast.py  test_local_array_from.py  test_loop_unroll.py
tests/benchmarks/: README.md  benchmark_utils.py  conftest.py
tests/data/: Makefile  fake_mlir_shim.c
tests/doc_examples/: test_cg.py  test_cpointer.py  test_cpu_gpu_compat.py  test_ffi.py  test_globals.py  test_laplace.py  test_matmul.py  test_montecarlo.py  test_random.py  test_reduction.py  test_sessionize.py  test_ufunc.py  test_vecadd.py
tests/infra/: my_intrinsics.py  test_dwarf_cubin.py  test_link_libraries.py  test_numba_cuda_mlir_module_callbacks.py  test_ptx_version.py  test_user_intrinsics.py
tests/memory_management/: nrt_test_type.py  test_nrt_stats.py
tests/mlir/: test_llvm_helpers.py
(+230 files in other folders)
