# SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools>=64",
    "wheel",
    "ninja",
    "cmake",
]

[project]
name = "numba_cuda_mlir"
dynamic = ["version",]
description = "numba-cuda-mlir Python Compiler"
readme = { file = "README.md", content-type = "text/markdown" }
authors = [
    { name = "NVIDIA Corporation" }
]
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "llvmlite",
    "typing-extensions; python_version < '3.12'",
    "cuda-bindings>=12.9.1,<14.0.0",
    "cuda-core>=0.5.1,<2.0.0",
]

[project.optional-dependencies]
cu12 = [
    "cuda-bindings>=12.9.1,<13.0.0",
    "cuda-toolkit[cudart,nvcc,nvrtc,nvjitlink,cccl]==12.*",
    "nvidia-nvjitlink-cu12>=12.3.0,<13.0.0",
]
cu13 = [
    "cuda-bindings==13.*",
    "cuda-toolkit[cudart,nvcc,nvrtc,nvjitlink,cccl]==13.*",
]

[dependency-groups]
dev = [
    "pre-commit",
    "ruff",
]
test = [
    "pytest>=8,<9",
    "pytest-xdist",
    "pytest-benchmark",
    "pytest-rerunfailures",
    "pytest-subtests",
    "filecheck",
    "cffi",
    "ml-dtypes",
]
test-cu12 = [{include-group = "test"}]
test-cu13 = [{include-group = "test"}]

[project.urls]
Homepage = "https://github.com/NVIDIA/numba-cuda-mlir"
Repository = "https://github.com/NVIDIA/numba-cuda-mlir"

[tool.setuptools.packages.find]
where = ["src"]
include = ["numba_cuda_mlir", "numba_cuda_mlir*"]
namespaces = true

[tool.setuptools.package-dir]
numba_cuda_mlir = "src/numba_cuda_mlir"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"numba_cuda_mlir" = [
    "lib/*.so",
    "lib/*.dll",
    "*.dll",
    "*.pyd",
    "**/*.mlir",
    "**/*.cu",
    "**/*.cuh",
    "**/*.pyi",
    "py.typed",
    "VERSION",
    "_mlir/**/*.so",
    "_mlir/**/*.dll",
    "_mlir/**/*.pyd",
    "_mlir/**/*.py",
    "_mlir/**/*.pyi",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 100

[tool.ruff.lint.pycodestyle]
max-doc-length = 100
max-line-length = 100

[tool.ruff.lint]
ignore = [
    "E20",
    "E231",
    "E241",
    "E26",
    "E731",
    "E741",
    "B028",
    "B904",
    "B905",
    "B019",
    # flake8-bandit (S) rules suppressed project-wide
    "S101",   # assert usage (fundamental to test suite)
    "S102",   # exec() used intentionally in compiler/codegen
    "S110",   # try-except-pass for optional feature detection
    "S301",   # pickle used for compiler serialization
    "S603",   # subprocess calls are internal tooling
    "S607",   # partial executable paths in subprocess (same as S603)
    # TODO: fix violations and remove these suppressions
    "S307",   # eval() usage (2 hits in compiler)
]
select = ["B"]
extend-select = ["PERF", "S"]
fixable = ["ALL"]

exclude = [
    "__pycache__",
    ".git",
    "*.pyc",
    "*~",
    "*.o",
    "*.so",
    "*.cpp",
    "*.c",
    "*.h",
    "3rdparty/*",
    "src/numba_cuda_mlir/numba_cuda/*",
    "cext/typeconv/*",
    "cext/helperlib/*",
    "cext/mviewbuf/*",
    "src/numba_cuda_mlir/mlir",
]

[tool.ruff.lint.per-file-ignores]
"**/test*.py" = ["PERF", "B007", "B018", "B023"]
"src/numba_cuda_mlir/__init__.py" = ["F401", "F403", "F405", "E402"]
"src/cuda/**/__init__.py" = ["F401", "F403"]

[tool.uv]
conflicts = [
    [
        {extra = "cu12"},
        {extra = "cu13"},
    ],
    [
        {group = "test-cu12"},
        {group = "test-cu13"},
    ],
]

[tool.pytest.ini_options]
testpaths = [ "tests" ]
filterwarnings = [
    "ignore:The CUDA driver version is older than the backend version:RuntimeWarning",
    "ignore:Grid size.*will likely result in GPU under-utilization:",
    "ignore:Host array used in CUDA kernel will incur copy overhead:",
    "ignore:Numpy array was passed directly to numba-cuda-mlir kernel:",
    "ignore:The cuda.core.experimental namespace is deprecated.:",
    "ignore:invalid value encountered:",
    "ignore:It is deprecated to return a value that is not None from a test case:",
    "ignore:Benchmarks are automatically disabled because xdist:pytest_benchmark.logger.PytestBenchmarkWarning",
]
xfail_strict = true
markers = [
    "libdevice: Test cases for libdevice functions. They are flakey because of their use of `exec` and may need to be run on their own.",
]
addopts = [
    "--reruns=3",
    "--only-rerun=Call to cuMemAlloc results in CUDA_ERROR_ILLEGAL_ADDRESS",
    "--ignore=tests/doc_examples",
]

[project.scripts]
numba-cuda-mlir-stubgen = "numba_cuda_mlir.tools:create_numba_cuda_stubs"
numba-cuda-mlir-generate-libdevice-stubs = "numba_cuda_mlir.tools:generate_libdevice_stubs"
numba-cuda-mlir-replace-numba-cuda = "numba_cuda_mlir.tools:replace_numba_cuda_in_numba_install"
